
2007-12-17 tdb
 * Removed backwards compatibility stuff from LibXML - we need 1.63 which has
    all the fixes in anyway.
 * Fixed compatibility problem with IE in jscss.js, fixing #3164

2007-12-17 cjg
 * Phrase files now dynamically reload if they have changed, but this won't
    handle phrases being moved between phrase files. eg. from system.xml
    to repository specific.
	
2007-12-17 cjg
 * Small change to previous commit to make it use a more generic name for
    the hash which tracks which config file mtimes have been checked.

2007-12-17 cjg
 * If root database connect fails, in epadmin, it offers you the option to
    try again, rather than instantly exiting. Closes #2807

2007-12-17 cjg
 * epadmin now generates a random 8 character database password as the 
    default value when configuring the database for a repository, although
    this may still be over-ridden.

2007-12-18 cjg
 * Added Export/IDs which is a very simple (and fast) export that just 
    outputs a \n separated list of IDs of the items.

2007-12-19 tdb
 * Session::render_link shouldn't URI escape (should be HTML escaping, which
    the DOM library will do for us), fixing #3197
 * Added methods to parse XML direct from a URL
 * Added 'pid' configuration to Import::DOI, removed use of wget, fixing #3193
    and #2854, and part of #2820

2007-12-20 tdb
 * Removed temporary file usage from PubMedID import script, fixing #2820

2007-12-24 cjg
 * Removed bin/list_user_emails, replacing it with an export plugin to 
    perform the same action.

2008-01-04 cjg
 * Added mtime function to EPrints::Utils
 * Moved update routines for static and view pages into their own modules.
 * views now use a "variations" config option
 * New function to get all eprints ids from a dataset, grouped by a certain 
    field. Used to show how many in a section in views.
 * Writing pages now creates any needed directories.
 * Tweaked the way session renders a subject tree.
 * nb. Some debug code left in this commit